Train the model on the training data

--- a/Decsion_tress_classifier.ipynb
+++ b/Decsion_tress_classifier.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Decsion_tress_classifier.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyM0GDXLICJ9TG7QDTYjEc8D",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hemanjalireddy/Decision_tree_Classifier/blob/main/Decsion_tress_classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -118,11 +130,11 @@
         "x_train"
       ],
       "metadata": {
-        "id": "TILEdjqo1rGr",
-        "outputId": "bdd546b9-7d9a-41af-d710-c266d502c777",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TILEdjqo1rGr",
+        "outputId": "bdd546b9-7d9a-41af-d710-c266d502c777"
       },
       "execution_count": 7,
       "outputs": [
@@ -443,11 +455,11 @@
         "x_test"
       ],
       "metadata": {
-        "id": "BNsWWvx51rpm",
-        "outputId": "b48f7726-9734-4016-c293-28aa4d4fed78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BNsWWvx51rpm",
+        "outputId": "b48f7726-9734-4016-c293-28aa4d4fed78"
       },
       "execution_count": 8,
       "outputs": [
@@ -559,6 +571,43 @@
           },
           "metadata": {},
           "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training the Decision Tree Classification model on the Training set"
+      ],
+      "metadata": {
+        "id": "nlaQPTW-13jq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "classifier = DecisionTreeClassifier(criterion = 'entropy', random_state = 0)\n",
+        "classifier.fit(x_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "58Mapfkd152q",
+        "outputId": "50e9d742-0343-41da-aef5-016fa1871125"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(criterion='entropy', random_state=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
