Predict new results and test set results

--- a/Decsion_tress_classifier.ipynb
+++ b/Decsion_tress_classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Decsion_tress_classifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0GDXLICJ9TG7QDTYjEc8D",
+      "authorship_tag": "ABX9TyNEogf3yoxAzBbGo6ugThg4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -608,6 +608,170 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Predicting a new result"
+      ],
+      "metadata": {
+        "id": "lgTgAUfe2atr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classifier.predict(sc.transform([[30,87000]])))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EEhdQ13n2ecq",
+        "outputId": "c770d359-6150-41ad-86a7-b5b80454502c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Predicting the Test set results"
+      ],
+      "metadata": {
+        "id": "QnkEbsXy2g7y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = classifier.predict(x_test)\n",
+        "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NrX69es72f13",
+        "outputId": "7bd285c8-da64-4776-d76f-695e1da3daf9"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 0]\n",
+            " [0 0]\n",
+            " [1 0]\n",
+            " [1 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 1]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 0]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [1 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [0 0]\n",
+            " [1 1]\n",
+            " [1 1]\n",
+            " [1 1]]\n"
+          ]
         }
       ]
     }
