--- a/Decsion_tress_classifier.ipynb
+++ b/Decsion_tress_classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Decsion_tress_classifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEogf3yoxAzBbGo6ugThg4",
+      "authorship_tag": "ABX9TyM7pjjY3e2Z/ZkENze4k3e0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -772,6 +772,60 @@
             " [1 1]\n",
             " [1 1]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating the confusion matrix"
+      ],
+      "metadata": {
+        "id": "jfazUmWy2tyq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix , accuracy_score\n",
+        "cm = confusion_matrix(y_test , y_pred)\n",
+        "cm_df = pd.DataFrame(cm)\n",
+        "cm_df.columns = ['Predicted 0' , 'Predicted 1']\n",
+        "cm_df = cm_df.rename(index={0:'Actual 0' , 1:'Actual 1'})\n",
+        "print(cm_df)\n",
+        "print()\n",
+        "print(\"Accuracy :\")\n",
+        "accuracy_score(y_test , y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2nfkQAv_2xMl",
+        "outputId": "d1e48ff5-d9d5-4f3a-f40f-4ecbad05fe65"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          Predicted 0  Predicted 1\n",
+            "Actual 0           62            6\n",
+            "Actual 1            3           29\n",
+            "\n",
+            "Accuracy :\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.91"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
